# build_system_playground

./: .cproject  .gitmodules  .project  CMakeLists.txt  README.md  main.cpp  meson.build  project.cmake
doc/: README.md
src/build_system_playground/: links.cpp  main.cpp
test/: simple_test.cpp
